Actualización del código

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Blog personal sobre aprendizaje de desarrollo web">
     <meta name="keywords" content="HTML, CSS, JavaScript, diseño web">
     <link rel="stylesheet" href="main.css">
-    <script src='main.js' defer></script>
+    <script src='main.js'></script>
     
 </head>
 <body>
@@ -25,7 +25,7 @@
                     <ul class="menu-vertical">
                         <li><a href="inicio1.html">Introducción</a></li>
                         <li><a href="inicio2.html">Objetivos</a></li>
-                        <li><a href="inicio3.html">Propósito</a></li> 
+                        <li><a href="inicio3.html">Propósito</a></li> <!-- Error corregido -->
                         <li><a href="inicio4.html">Actualidad</a></li>
                         <li><a href="inicio5.html">Contacto</a></li>
                     </ul>
